--- a/_sass/home-cards-and-projects.scss
+++ b/_sass/home-cards-and-projects.scss
@@ -1,3 +1,6 @@
+@import 'variables-colors';
+@import 'variables-typography';
+
 #about, .projects {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
