--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,9 +1,12 @@
-header {	
-  	background-color: $mygray;
-    width: 100%;
-  	height: 100px; 
-    top: 0;
-  	position: fixed;
+@import 'variables-colors';
+@import 'variables-typography';
+
+header {
+  background-color: $mygray;
+  width: 100%;
+  height: 100px;
+  top: 0;
+  position: fixed;
  	padding: 18px;
 	z-index: 999;
 	text-align: center;
@@ -21,7 +24,7 @@ header {
 }
 
 .menu ul {
-	font-family: title-type;
+	font-family: $title-type;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	display: flex;
@@ -35,7 +38,7 @@ header {
 
 .menu ul li a {
 	color: $mypink;
- 	font-size: 16px; 
+ 	font-size: 16px;
  	text-decoration: none;
 }
 
@@ -45,8 +48,8 @@ header {
 
 
 @media only screen and ( min-width: 768px ) {
-	
-	header {	
+
+	header {
 		text-align: left;
 	}
 
@@ -56,7 +59,7 @@ header {
 	}
 
 	.menu ul li {
-	 	font-size: 20px; 
+	 	font-size: 20px;
 	}
 
 }
