--- a/_sass/home-whys.scss
+++ b/_sass/home-whys.scss
@@ -1,3 +1,6 @@
+@import 'variables-colors';
+@import 'variables-typography';
+
 #whys .text-block {
 	background-color: $mypink;
 	left: 0;
@@ -13,7 +16,7 @@
 @keyframes slide {
   from {
     margin-left: 100%;
-    width: 300%; 
+    width: 300%;
   }
 
   to {
