--- a/_sass/home-whys.scss
+++ b/_sass/home-whys.scss
@@ -5,11 +5,10 @@
 	background-color: $mypink;
 	left: 0;
 	padding: 10px 0 60px;
-}
-
-.text-block h1 {
-	line-height: 1.2;
-	animation: slide 2s 2;
+	h1 {
+		line-height: 1.2;
+		animation: slide 2s 2;
+	}
 }
 
 
