--- a/_sass/components-button.scss
+++ b/_sass/components-button.scss
@@ -17,7 +17,7 @@
 	background-position: right bottom;
 	transition: all .5s ease-out;
 
-	:hover {
+	&:hover {
 		color: $mybeige;
 		background-position: left bottom;
 	}
