--- a/_sass/home-empathy.scss
+++ b/_sass/home-empathy.scss
@@ -1,5 +1,4 @@
-@import 'variables-colors';
-@import 'variables-typography';
+@import 'variables';
 
 #empathy h1, #education h1  {
 	margin: -110px 0 0;
