--- a/_sass/home-whys.scss
+++ b/_sass/home-whys.scss
@@ -1,5 +1,4 @@
-@import 'variables-colors';
-@import 'variables-typography';
+@import 'variables';
 
 #whys .text-block {
 	background-color: $mypink;
