--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,3 +3,6 @@ $mylightgray: #F0E9DB;
 $mybeige: #FFFBF3;
 $mypink: #F3DBD6;
 $myyelllow: #FFF469;
+
+$sans-type: ('Roboto', sans-serif);
+$title-type: ('Barlow Semi Condensed', sans-serif);
