--- a/_sass/omeuestilo.scss
+++ b/_sass/omeuestilo.scss
@@ -8,8 +8,7 @@
 @import 'home-empathy';
 @import 'home-contacts';
 
-@import 'variables-colors';
-@import 'variables-typography';
+@import 'variables';
 
 *{
   margin: 0;
