--- a/_sass/omeuestilo.scss
+++ b/_sass/omeuestilo.scss
@@ -8,9 +8,9 @@
 @import 'home-empathy';
 @import 'home-contacts';
 
-@import 'variables';
+@import 'variables-mixins';
 
-*{
+* {
   margin: 0;
   box-sizing: border-box;
   list-style-type: none;
@@ -26,11 +26,7 @@
 }
 
 body {
-	color: $mygray;
-	font-family: $sans-type;
-	font-size: 14px;
-  line-height: 1.6;
-	text-align: left;
+  @include font-source-sans(14px, $mygray, 1.6);
 	background-color: $mybeige;
 	padding-top: 120px;
   a {
@@ -53,34 +49,29 @@ nav a {
 }
 
 h1 {
-	font-family: $title-type;
-	font-size: 32px;
-	line-height: 1;
+  @include font-source-sans-condesed(32px, 1.2);
 	margin: 50px 0 20px 20px;
 }
 
 h2 {
-	font-family: $title-type;
-	font-size: 24px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	margin-left: 20px;
+  @include font-source-sans-condesed(24px);
+  @include uppercase;
+	@include margin-left-mobile-20;
 }
 
 h3 {
-	font-family: $sans-type;
-	font-size: 18px;
-	line-height: 1.8;
-	margin-left: 20px;
+  @include font-source-sans(18px, 1.8);
+  @include margin-left-mobile-20;
+  margin-top: 20px;
 }
 
 p, #education li, #contacts li, #empathy h1, #education h1 {
-	margin-left: 20px;
+  @include margin-left-mobile-20;
 }
 
 img {
 	width: 100%;
-	height: auto;
+  height: auto;
 }
 
 ul, ol {
@@ -95,20 +86,32 @@ ul, ol {
 
 @media only screen and ( min-width: 768px ) {
 
+  * {
+    @include margin-left-desktop-0;
+  }
+
 	body {
 		font-size: 16px;
+    @include margin-left-desktop-0;
 	}
 
 	h1 {
 		font-size: 42px;
+    @include margin-left-desktop-0;
 	}
 
 	h2 {
 		font-size: 30px;
+    @include margin-left-desktop-0;
 	}
 
 	h3 {
 		font-size: 20px;
+    @include margin-left-desktop-0;
 	}
+
+  p, #education li, #contacts li, #empathy h1, #education h1 {
+    @include margin-left-desktop-0;
+  }
 
 }
