Sass - correções mixins e variáveis

--- a/_sass/components-button.scss
+++ b/_sass/components-button.scss
@@ -22,7 +22,7 @@
 @media only screen and ( min-width: 768px ) {
 
   .button {
-    @include margin-left-desktop-0;
+    margin-left: $margin-desktop;
   }
 
 }
