Correções Grid Empathy + Optimização Mixins

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
   <a href="#top" class="logo">
     <span>Joana Miranda Portfolio</span>
-    <img src="images/Joana-Miranda-Portfolio-Logo@.png" alt="logo Joana Miranda">
+    <img src="images/Joana-Miranda-Portfolio-Logo.png" alt="logo Joana Miranda">
   </a>
-  
+
   <nav class="menu">
     <ul>
        <li><a href="#about">About Me</a></li>
@@ -12,5 +12,5 @@
        <li><a href="#contacts">Contacts</a></li>
     </ul>
   </nav>
-  
+
 </header>
