--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -8,7 +8,8 @@ header {
   position: fixed;
  	padding: 18px;
 	z-index: 999;
-  @include inline-flex;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
