--- a/_sass/home-empathy.scss
+++ b/_sass/home-empathy.scss
@@ -1,196 +1,76 @@
 @import 'variables-mixins';
 
-#empathy h1, #education h1  {
-	margin: -110px 0 0;
+#empathy {
+	display: grid;
+	grid-template-columns: 1fr;
 }
 
-#empathy ul {
-	padding: 0;
+.says ul, .thinks ul, .does ul, .feels ul {
 	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-column-gap: 10px;
-	grid-template-rows: repeat(11, 1fr);
-	height: 160px;
-	li {
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 10px;
+}
+
+#empathy li {
 		color: $mygray;
 		background: $mylightgray;
 		box-shadow: 3px 3px 3px $mylightgray;
 		font-size: 14px;
 		padding: 14px;
 		line-height: 1.4;
-		min-width: 110px;
-		min-height: 110px;
-	}
-}
-
-#empathy li:first-child {
- 	background: $mypink;
-	z-index: -1;
+		@include aspect-ratio(1, 1);
+		max-width: 200px;
+		margin-bottom: 14px;
+		&:first-child {
+			background: $mypink;
+			margin-left: 20px;
+		}
 		&:nth-child(3n+2) {
-	 		background: $mypink;
+			background: $mypink;
+			margin: 30px 0 0 30px;
 		}
 		&:nth-child(3n+3) {
-	 		background: $myyelllow;
+			background: $myyelllow;
+			margin-top: -70px;
+			justify-self: end;
 		}
+
+
 }
 
-.post-it1 {
-	grid-column: 1 / 6;
-	grid-row: 1 / 2;
-}
-
-.post-it2 {
-	grid-column: 7 / 12;
-	grid-row: 1 / 2;
-}
-
-.post-it3 {
-	grid-column: 2 / 7;
-	grid-row: 2 / 3;
-}
-
-.post-it4 {
-	grid-column: 7 / 12;
-	grid-row: 2 / 3;
-}
-
-.post-it5 {
-	grid-column: 1 / 6;
-	grid-row: 4 / 5;
-}
-
-.post-it6 {
-	grid-column: 7 / 12;
-	grid-row: 4 / 5;
-}
-
-.post-it7 {
-	grid-column: 2 / 7;
-	grid-row: 5 / 6;
-}
-
-.post-it8 {
-	grid-column: 7 / 12;
-	grid-row: 5 / 6;
-}
-
-.post-it9 {
-	grid-column: 1 / 6;
-	grid-row: 7 / 8;
-}
-
-.post-it10 {
-	grid-column: 8 / 13;
-	grid-row: 7 / 8;
-}
-
-.post-it11 {
-	grid-column: 3 / 8;
-	grid-row: 8 / 9;
-}
-
-.post-it12 {
-	grid-column: 2 / 7;
-	grid-row: 10 / 11;
-}
-
-.post-it13 {
-	grid-column: 8 / 13;
-	grid-row: 10 / 11;
-}
-
-.post-it14 {
-	grid-column: 3 / 8;
-	grid-row: 11 / 12;
-}
-
-.line-bottom {
-	border-bottom: 3px solid black;
-}
-
-.line-right {
-	border-right: 0px solid black;
-}
-
-.line-left {
-	border-left: 0px solid black;
-}
-
-.line-top {
-	border-top: 3px solid black;
+hr {
+		height: 4px;
+		background: $mygray;
 }
 
 
 @media only screen and ( min-width: 768px ) {
 
-	.post-it1 {
-		grid-column: 1 / 3;
-		grid-row: 2 / 3;
-	}
+		#empathy {
+			grid-template-columns: 1fr 1fr;
+		}
 
-	.post-it2 {
-		grid-column: 4 / 6;
-		grid-row: 2 / 3;
-	}
+		#empathy li {
+			max-height: 200px;
+		}
 
-	.post-it3 {
-		grid-column: 2 / 4;
-		grid-row: 3 / 4;
-	}
+		#empathy h1 {
+			grid-column-start: 1;
+   		grid-column-end: 3;
+			justify-self: start;
+		}
 
-	.post-it4 {
-		grid-column: 4 / 6;
-		grid-row: 3 / 4;
-	}
+		h2 {
+			text-align: center;
+		}
 
-	.post-it5 {
-		grid-column: 7 / 9;
-		grid-row: 2 / 3;
-	}
+		.says hr, .thinks hr {
+			display: none;
+		}
 
-	.post-it6 {
-		grid-column: 10 / 12;
-		grid-row: 2 / 3;
-	}
+		.vertical-line {
+			border-right: 3px solid $mygray;
+			height: 100%;
+		}
 
-	.post-it7 {
-		grid-column: 8 / 9;
-		grid-row: 3 / 4;
-	}
-
-	.post-it8 {
-		grid-column: 10 / 12;
-		grid-row: 3 / 4;
-	}
-
-	.post-it9 {
-		grid-column: 2 / 4;
-		grid-row: 5 / 6;
-	}
-
-	.post-it10 {
-		grid-column: 4 / 6;
-		grid-row: 5 / 6;
-	}
-
-	.post-it11 {
-		grid-column: 3 / 5;
-		grid-row: 6 / 7;
-	}
-
-	.post-it12 {
-		grid-column: 7 / 9;
-		grid-row: 5 / 6;
-	}
-
-	.post-it13 {
-		grid-column: 10 / 12;
-		grid-row: 5 / 6;
-	}
-
-	.post-it14 {
-		grid-column: 8 / 10;
-		grid-row: 6 / 7;
-	}
-
-}
+ 	}
