--- a/_sass/home-empathy.scss
+++ b/_sass/home-empathy.scss
@@ -20,22 +20,17 @@
 		line-height: 1.4;
 		@include aspect-ratio(1, 1);
 		max-width: 200px;
-		margin-bottom: 14px;
+		margin-bottom: 40px;
+		align-self: start;
 		&:first-child {
 			background: $mypink;
-			margin-left: 20px;
 		}
 		&:nth-child(3n+2) {
 			background: $mypink;
-			margin: 30px 0 0 30px;
 		}
 		&:nth-child(3n+3) {
 			background: $myyelllow;
-			margin-top: -70px;
-			justify-self: end;
 		}
-
-
 }
 
 hr {
@@ -52,6 +47,15 @@ hr {
 
 		#empathy li {
 			max-height: 200px;
+			&:first-child {
+				margin-left: 60px;
+			}
+			&:nth-child(3n+2) {
+				margin: 50px 0 0 50px;
+			}
+			&:nth-child(3n+3) {
+				margin: -90px 0 30px 20px;
+			}
 		}
 
 		#empathy h1 {
