Scroll to top button with animation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
         <ul>
           <li><a href="#whys">5 Whys I wanna be a UX Designer</a></li>
           <li><a href="#about">Introduction card - others about me</a></li>
-          <li><a href="#emphaty">Emphaty map - me about me</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a href="#empathy">Empathy map - me about me</a></li>
+          <li><a href="#myprojects">Projects</a></li>
           <li><a href="#education">Education</a></li>
         </ul>
       </nav>
@@ -35,5 +35,8 @@
             </a>
           </li>
         </ul>
+        </section>
+        <section class="top">
+          <a href="#top" class="top"><i class="fas fa-arrow-up"></i></a>
         </section>
     </footer>
