--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,38 +1,39 @@
 @import 'variables-mixins';
 
 header {
-  background-color: $mygray;
-  width: 100%;
-  height: 100px;
-  top: 0;
   position: fixed;
- 	padding: 18px;
-	z-index: 999;
+  z-index: 999;
+  top: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100px;
+  padding: 18px;
+  background-color: $mygray;
 }
 
 .logo {
+  display: inline-block;
+  text-indent: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 	width: 267px;
 	height: 32px;
-	display: inline-block;
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
 	background:url(../images/Joana-Miranda-Portfolio-Logo.png);
 	background-repeat: no-repeat;
 }
 
 .menu ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 	font-family: $title-type;
   @include uppercase;
-	display: flex;
-
   li {
-    list-style: none;
 	  padding-right: 20px;
+    list-style: none;
   }
 }
 
@@ -50,6 +51,7 @@ header {
 
 	header {
     justify-content: flex-end;
+    align-items: center;
 	}
 
   .logo {
