Alteração Navs Header e Footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,36 +1,34 @@
 <footer>
       <nav class="nav-footer">
         <ul>
-          <li><a href="#whys">5 Whys I wanna be a UX Designer</a></li>
-          <li><a href="#about">Introduction card - others about me</a></li>
-          <li><a href="#empathy">Empathy map - me about me</a></li>
-          <li><a href="#myprojects">Projects</a></li>
-          <li><a href="#education">Education</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact me</a></li>
         </ul>
       </nav>
       <section>
         <ul class="contacts-footer">
           <li>
             <a href="mailto:joana.miranda25@gmail.com">
-              <img src="assets/images/Joana-Miranda-Portfolio-Email.svg" alt="Email icon">
+              <img src="/assets/images/Joana-Miranda-Portfolio-Email.svg" alt="Email icon">
               <span>Email</span>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/joana-miranda-aa89863b/" target="_blank">
-              <img src="assets/images/Joana-Miranda-Portfolio-Linkedin.svg" alt="Linkedin logo">
+            <a href="https://www.linkedin.com/in/joanamiranda88/" target="_blank">
+              <img src="/assets/images/Joana-Miranda-Portfolio-Linkedin.svg" alt="Linkedin logo">
               <span title="Website name">Linkedin</span>
             </a>
           </li>
           <li>
-            <a href="https://medium.com/@joana.miranda25" target="_blank">
-              <img src="assets/images/Joana-Miranda-Portfolio-Medium.svg" alt="Medium logo">
+            <a href="https://medium.com/@joanamiranda88" target="_blank">
+              <img src="/assets/images/Joana-Miranda-Portfolio-Medium.svg" alt="Medium logo">
               <span title="Webite name">Medium</span>
             </a>
           </li>
           <li>
-            <a href="https://www.behance.net/joanamiran4db5" target="_blank">
-              <img src="assets/images/Joana-Miranda-Portfolio-Behance.svg" alt="Behance logo">
+            <a href="https://www.behance.net/joanamiranda88" target="_blank">
+              <img src="/assets/images/Joana-Miranda-Portfolio-Behance.svg" alt="Behance logo">
               <span title="Website name">Behance</span>
             </a>
           </li>
