--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,14 @@
 <header>
-  <a href="#top" class="logo">
+  <a href="https://joanamiranda88.github.io/#top" class="logo">
     <span>Joana Miranda Portfolio</span>
-    <img src="images/Joana-Miranda-Portfolio-Logo.png" alt="logo Joana Miranda">
+    <img src="/images/Joana-Miranda-Portfolio-Logo@2x.png" alt="logo Joana Miranda">
   </a>
 
   <nav class="menu">
     <ul>
-       <li><a href="#about">About Me</a></li>
-       <li><a href="#myprojects">Projects</a></li>
-       <li><a href="#education">Education</a></li>
-       <li><a href="#contacts">Contacts</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact me</a></li>
     </ul>
   </nav>
 
