--- a/_sass/home-cards-and-projects.scss
+++ b/_sass/home-cards-and-projects.scss
@@ -20,11 +20,13 @@
 
 @media only screen and ( min-width: 768px ) {
 
-    .card, .one-project {
+		.card, .one-project {
 			display: inline-flex;
-			flex-wrap: wrap;
+			flex-direction: column;
 			width: 49%;
-			padding: 0;
+			&:nth-child(odd) {
+				margin-right: 20px;
+			}
 		}
 
 		.card figcaption {
