--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
 
   <nav class="menu">
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact me</a></li>
+        <li><a href="https://joanamiranda88.github.io">Home</a></li>
+        <li><a href="{{ about.md }}">About</a></li>
+        <li><a href="{{ form.html }}">Contact me</a></li>
     </ul>
   </nav>
 
