--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,21 @@
 layout: default
 ---
 <section class="post">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <span class="author">{{ page.author | escape }}</span>
-    <time class="date" datetime="{{ page.date | date_to_xmlschema }}">
-      {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%}
-      {{ page.date | date: date_format }}
-    </time>
+    <h1>{{ page.title }}</h1>
+    <ul class="post-infos">
+      <li><span class="author">{{ page.author | escape }}</span></li>
+      <li><time class="date" datetime="{{ page.date | date_to_xmlschema }}">
+        {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%}
+        {{ page.date | date: date_format }}
+      </time></li>
+    </ul>
     <p>{{ content }}</p>
-    <ul>
+    <ul class="post-images">
       <li>
-        <img src="{{ page.image-1 }}" alt="{{ page.alt-1 }}">
+        <img src="{{ page.image-1 }}" alt="{{ page.alt-1 }}" class="post-images1">
         <img src="{{ page.image-2 }}" alt="{{ page.alt-2 }}">
-        <img src="{{ page.image-3 }}" alt="{{ page.alt-4 }}">
-        <img src="{{ page.image-5 }}" alt="{{ page.alt-5 }}">
+        <img src="{{ page.image-3 }}" alt="{{ page.alt-3 }}">
+        <img src="{{ page.image-4 }}" alt="{{ page.alt-4 }}">
       </li>
     </ul>
     <a href="{{ page.link }}" target="_blank" class="button">View case study</a>
