--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header>
-  <a href="https://joanamiranda88.github.io/#top" class="logo">
+  <a href="/index.html" class="logo">
     <span>Joana Miranda Portfolio</span>
     <img src="/images/Joana-Miranda-Portfolio-Logo@2x.png" alt="logo Joana Miranda">
   </a>
 
   <nav class="menu">
     <ul>
-        <li><a href="https://joanamiranda88.github.io">Home</a></li>
-        <li><a href="{{ about.md }}">About</a></li>
-        <li><a href="{{ form.html }}">Contact me</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact me</a></li>
     </ul>
   </nav>
 
