--- a/_sass/home-cards-and-projects.scss
+++ b/_sass/home-cards-and-projects.scss
@@ -23,7 +23,7 @@
 		.card, .one-project {
 			display: inline-flex;
 			flex-direction: column;
-			width: 49%;
+			width: 47%;
 			&:nth-child(odd) {
 				margin-right: 20px;
 			}
@@ -31,10 +31,16 @@
 
 		.card figcaption {
 			line-height: 1.4;
-			margin-left: $margin-desktop;
 		}
 
 		#about h1 {
 			margin-top: 60px;
 		}
  	}
+
+	@media only screen and ( min-width: 1024px ) {
+
+		.card figcaption {
+			margin-left: $margin-desktop;
+		}
+	}
