--- a/_sass/omeuestilo.scss
+++ b/_sass/omeuestilo.scss
@@ -84,6 +84,7 @@ p, #education li, #contacts li {
 img {
 	width: 100%;
   height: auto;
+  @include aspect-ratio(4, 3);
 }
 
 ul, ol {
@@ -92,14 +93,6 @@ ul, ol {
 
 
 @media only screen and ( min-width: 768px ) {
-
-  body * {
-    margin-left: $margin-desktop;
-  }
-
-  p, #education li, #contacts li {
-    margin-left: $margin-desktop;
-  }
 
 	body {
 		font-size: 16px;
@@ -116,8 +109,19 @@ ul, ol {
 	h3 {
 		font-size: 20px;
 	}
+}
 
-  #empathy h1, #education h1  {
-    margin-left: $margin-desktop;
-  }
+@media only screen and ( min-width: 1024px ) {
+
+    body * {
+      margin-left: $margin-desktop;
+    }
+
+    #empathy h1, #education h1  {
+      margin-left: $margin-desktop;
+    }
+
+    p, #education li, #contacts li {
+      margin-left: $margin-desktop;
+    }
 }
