--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -1,34 +1,56 @@
-.post {
-  display: grid;
-  grid-gap: 10px;
-}
-
-.post .post-infos {
+.posts .post-infos {
   font-weight: bold;
 }
 
 @media only screen and ( min-width: 768px ) {
 
-  .post {
-    grid-template-columns: repeat(3, 1fr);
+  .posts {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(3, [col] 1fr ) ;
+    grid-template-rows: repeat(2, [row] auto );
   }
 
-  .post h1 {
+  .posts h1 {
+    grid-column: col / span 3;
+    grid-row: 1;
+  }
+
+  .posts p {
+    grid-column: col / span 2;
+    grid-row: 2;
+  }
+
+  .posts .posts-infos {
+    grid-column: col 3 / span 1;
+    grid-row: 2;
+  }
+
+  .posts-images ul {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column: col 1 / 4;
+    grid-row: 3;
+  }
+
+  .image1 {
     grid-column: 1 / 4;
     grid-row: 1;
   }
 
-  .post .post-infos {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
+  .image2 {
+    grid-column: 1 / 2 ;
+    grid-row: 2;
   }
 
-  .post p {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
+  .image3 {
+    grid-column: 2 / 3;
+    grid-row: 2;
   }
 
-  .post-images  {
-    grid-column: 1 / 4;
+  .image4 {
+    grid-column: 3;
+    grid-row: 2;
   }
 }
