--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -34,7 +34,7 @@
     grid-row: 3;
   }
 
-  .posts-images li:first-child {
+  .image1 {
     grid-column: 1 / 4;
     grid-row: 1;
     margin-top: 20px;
