--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -1,6 +1,12 @@
 .posts .posts-infos {
   font-weight: bold;
+  margin-left: $margin-mobile;
 }
+
+.posts-images li:nth-child(4) {
+  margin-bottom: 30px;
+}
+
 
 @media only screen and ( min-width: 768px ) {
 
@@ -34,25 +40,26 @@
     grid-row: 3;
   }
 
-  .image1 {
+  .posts-images li:first-child {
     grid-column: 1 / 4;
     grid-row: 1;
     margin-top: 20px;
     margin-bottom: 20px;
   }
 
-  .image2 {
+  .posts-images li:nth-child(2) {
     grid-column: 1 / 2 ;
     grid-row: 2;
   }
 
-  .image3 {
+  .posts-images li:nth-child(3) {
     grid-column: 2 / 3;
     grid-row: 2;
   }
 
-  .image4 {
+  .posts-images li:nth-child(4) {
     grid-column: 3;
     grid-row: 2;
+    margin-bottom: 0;
   }
 }
