--- a/_sass/omeuestilo.scss
+++ b/_sass/omeuestilo.scss
@@ -15,10 +15,9 @@
   margin: 0;
   box-sizing: border-box;
   list-style-type: none;
-}
-
-::selection {
+  &::selection {
 	background: $myyelllow;
+  }
 }
 
 .container {
