--- a/_sass/posts.scss
+++ b/_sass/posts.scss
@@ -1,4 +1,4 @@
-.posts .posts-infos {
+.posts-infos {
   font-weight: bold;
   margin-left: $margin-mobile;
 }
@@ -27,7 +27,7 @@
     grid-row: 2;
   }
 
-  .posts .posts-infos {
+  .posts-infos {
     grid-column: col 3 / span 1;
     grid-row: 2;
   }
